objects/SVOC_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Data_Quality_Score__c</fullName>
        <formula>Source_Account__r.Data_Quality_Score__c</formula>
        <inlineHelpText>formula field that reads the Data Quality score from the account and prevents the user from submitting to svoc without all required information completed</inlineHelpText>
        <label>Account Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Customer_Number__c</fullName>
        <inlineHelpText>Enter the Account Number for this dealer if one has been generated. Example: Vin MotoSnap dealer id, vAuto logical id</inlineHelpText>
        <label>BU Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Attention_To__c</fullName>
        <label>Bill to Attention To</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Same_as_Physical__c</fullName>
        <label>Billing Address Same as Physical?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <formula>Customer_Name__r.BillingCity</formula>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <formula>Customer_Name__r.BillingPostalCode</formula>
        <label>Billing Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Customer_Name__r.BillingState</formula>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <formula>Customer_Name__r.BillingStreet</formula>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_ID__c</fullName>
        <formula>CASE( Business_Unit__c , 
&quot;VinSolutions&quot;,   Source_Account__r.AccountNumber , 
&quot;vAuto&quot;,   Source_Account__r.VAT_Account_Number__c  ,
&quot;Haystak&quot;,  Source_Account__r.Haystak_Account_Number__c ,
&quot;AutoTrader Group&quot;, Source_Account__r.AccountNumber ,
NULL)</formula>
        <label>Business Unit ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Owner:User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on the Owner&apos;s Company field.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Instructions__c</fullName>
        <defaultValue>&quot;**Select the Change Type, Urgency, then Save to next step&quot;</defaultValue>
        <label>Change Instructions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests</relationshipLabel>
        <relationshipName>SVOC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Sub_Type__c</fullName>
        <inlineHelpText>this field is dependant on Customer type and governed by SVOC</inlineHelpText>
        <label>Customer Sub Type</label>
        <picklist>
            <controllingField>Customer_Type__c</controllingField>
            <picklistValues>
                <fullName>AUCTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL INSTITUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLEET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - FEDERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOVERNMENT - STATE, LOCAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSURANCE COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASING COMPANY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON-AUTOMOTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RESELLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICE PROVIDER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traffic Partnerships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle History Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score_Status__c</fullName>
        <formula>IF( Account_Data_Quality_Score__c &lt; 100, &quot;Good&quot;, &quot;Bad&quot;)</formula>
        <inlineHelpText>formula field that reads the data quality score from the account</inlineHelpText>
        <label>Data Quality Score Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Submitted__c</fullName>
        <inlineHelpText>recorded by the system when the request is submitted to SVOC</inlineHelpText>
        <label>Date/Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the existing Dealer Group Account</inlineHelpText>
        <label>Dealer Group Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests (Dealer Group Account)</relationshipLabel>
        <relationshipName>SVOC_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_SVOC_Id__c</fullName>
        <formula>Dealer_Group_Account__r.SVOC_Id__c</formula>
        <inlineHelpText>formula field that looks up the svoc id from the dealer group account</inlineHelpText>
        <label>Dealer Group SVOC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_is_part_of_Dealer_Group__c</fullName>
        <label>Dealer is part of Dealer Group?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details_Why_Change_is_Needed__c</fullName>
        <label>Details Why Change is Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Account_Id__c</fullName>
        <description>SFID of the Account that was assign to the request.</description>
        <label>Final Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Account_Record_Id__c</fullName>
        <inlineHelpText>This holds the Salesforce.com Account ID value pointing to the resulting record for the Create or Maintain. May or may not be the same as the Source Account ID value depending on the scenario.</inlineHelpText>
        <label>Final Account Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>populated by SVOC Integration when a new account is created from the Dealer Request Form</inlineHelpText>
        <label>Final Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests (Final Account)</relationshipLabel>
        <relationshipName>SVOC_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Request_due_to_Ownership_Change__c</fullName>
        <inlineHelpText>if box is checked, workflow requires user to look up existing account</inlineHelpText>
        <label>Is Request due to Ownership Change?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Source_Account__r.Account_Legal_Name__c</formula>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Size_New__c</fullName>
        <label>Lot Size - New</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot_Size_Used__c</fullName>
        <label>Lot Size - Used</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36-45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>46-55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>56-65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>66-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>81-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>126-150</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>151-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-350</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>351-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>751+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nameplates__c</fullName>
        <label>Nameplates</label>
        <picklist>
            <picklistValues>
                <fullName>Independent Dealer - NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_Account_Inserted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an new account was inserted from the change request</description>
        <inlineHelpText>updated by the integration whenever a new primary or secondary is inserted from a change request</inlineHelpText>
        <label>New Account Inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Billing_City__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_Postal_Code__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_State__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>Billing State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Billing_Street_1__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>Billing Street 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_Street_2__c</fullName>
        <label>Billing Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_Street__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>New Billing Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Customer_Name__c</fullName>
        <label>New Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Legal_Name__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>New Invoice Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Shipping_City__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>New Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Shipping_Postal_Code__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>New Shipping Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Shipping_State__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>New Shipping State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Shipping_Street__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>New Shipping Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Processing_Status__c</fullName>
        <inlineHelpText>Not Submitted - Not sent to SVOC yet. 

Pending - Sent to SVOC, awaiting results. 

Submitted - has arrived from SVOC, needs to be worked. 

Completed - on non-returns, means a return has arrived; on returns, means you have worked it.</inlineHelpText>
        <label>Old Processing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_SVOC_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original SVOC Request</label>
        <referenceTo>SVOC_Request__c</referenceTo>
        <relationshipLabel>Returned SVOC Requests</relationshipLabel>
        <relationshipName>SVOC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physcial_Location_City__c</fullName>
        <formula>Source_Account__r.ShippingCity</formula>
        <inlineHelpText>formula field that rads the shipping city from the source account the request was processed from</inlineHelpText>
        <label>Source Account Physical Location City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Location_City__c</fullName>
        <label>Physical Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Location_Phone__c</fullName>
        <label>Physical Location Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_Location_Postal_Code__c</fullName>
        <inlineHelpText>Fill in only if changing</inlineHelpText>
        <label>Physical Location Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Location_Postal_Code_source__c</fullName>
        <formula>Source_Account__r.ShippingPostalCode</formula>
        <inlineHelpText>formula field that reads the shipping zip code from the source account the request was submitted from</inlineHelpText>
        <label>Source Account Physical Location Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Location_State__c</fullName>
        <label>Physical Location State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manitoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_Location_Street1__c</fullName>
        <label>Physical Location Street 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Location_Street_2__c</fullName>
        <label>Physical Location Street 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Account_SVOC_Id__c</fullName>
        <formula>Previous_Account__r.SVOC_Id__c</formula>
        <inlineHelpText>if the new dealer request has a previous account in the lookup, display the associated svoc id</inlineHelpText>
        <label>Previous Account SVOC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>lookup the existing account the new dealer setup request replaces</inlineHelpText>
        <label>Previous Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVOC Requests (Previous Account)</relationshipLabel>
        <relationshipName>SVOC_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <inlineHelpText>Not Submitted - Not sent to SVOC yet. 

Pending - Sent to SVOC, awaiting results. 

Submitted - has arrived from SVOC, needs to be worked. 

Completed - on non-returns, means a return has arrived; on returns, means you have worked it.</inlineHelpText>
        <label>Processing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>